# Agentic

./: .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  RAG_vs_RAG_LangChain.md  README.md  Simplified_PRD_AI_3D_Search.docx  TCJARVIS-666-batch-delete-design.docx  TCJARVIS-666-batch-delete-design.md  TCJARVIS-718-version-filtering-ui.md  async_folder_export_plan_cdf3d6f2.plan.md  build.gradle  custom_mcp_tools.py  docker-compose.yml  gradle.properties  main.py  mend_vulnerability_report_mcp.md  next-gen-fs-connect-permission-api-analysis (1).md  pr_review_agent_prompt.md  pr_review_file_services.md  pr_review_tcps_metrics.md  pr_trimble-connect-files-service_959_body.md  pyproject.toml  requirements.txt  security_fixes_TCPLT-13223.md  settings.gradle  user_prompt.md  user_prompt_mend_bb.md  user_prompt_mend_github.md
Orchestration/: .env.example  HOW_IT_WORKS.md  README.md  __init__.py  _react_path.py  graph.py  llm_client.py  main.py  pr_orchestrator.py  prompts.py  requirements.txt  state.py
RAG/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements-local.txt  requirements.txt
RAG_LangChain/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements-local.txt  requirements.txt
ReAct/: .dockerignore  .env.example  AZURE_DEPLOYMENT.md  Dockerfile  README.md  __init__.py  backend.py  github_api.py  main.py  mcp_bridge.py  pr_reviewer.py  prompts.py  react_agent.py  requirements.txt  streamable_mcp_client.py
async-folder-export/: DESIGN_DOC_AMENDMENTS.md  IMPLEMENTATION_PLAN.md
jarvis-react-ui/: README.md  index.html  (+2 more)
(+77 files in other folders)
