[project]
name = "mcp-fastapi"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "atlassian-python-api>=4.0.4",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "python-docx>=1.2.0",
    "requests>=2.32.4",
]
